[gd_scene load_steps=4 format=2]

[ext_resource path="res://tiles/main_tiles.tres" type="TileSet" id=1]
[ext_resource path="res://scripts/Map/Map.gd" type="Script" id=2]
[ext_resource path="res://scripts/enemies/SpawnPoint.gd" type="Script" id=3]

[node name="Map" type="Navigation2D"]
script = ExtResource( 2 )
wave_info = {
0: PoolStringArray( "2 path;1 wild", "2 path" ),
1: PoolStringArray( "4 path", "4 path" ),
2: PoolStringArray( "5 random", "2 path;2 wild" )
}

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 8
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -196600, 0, 0, -196599, 1, 0, -196598, 0, 0, -131064, 0, 0, -131063, 1, 0, -131062, 0, 0, -1, 536870927, 0, -65536, 536870922, 0, -65535, 536870922, 0, -65534, 536870922, 0, -65533, 536870922, 0, -65532, 536870922, 0, -65531, 536870922, 0, -65530, 536870922, 0, -65529, 536870922, 0, -65528, 536870921, 0, -65527, 1, 0, -65526, 536870923, 0, -65525, 536870922, 0, -65524, 536870924, 0, -65523, 536870927, 0, -65522, 536870922, 0, -65521, 536870922, 0, -65520, 536870922, 0, -65519, 536870922, 0, -65518, 536870922, 0, -65517, 536870922, 0, -65516, 536870924, 0, 65535, 536870918, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 536870920, 0, 13, 536870918, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 536870920, 0, 131071, 536870918, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 536870928, 0, 65541, 536870928, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 536870920, 0, 65549, 536870918, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 536870920, 0, 196607, 536870918, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 536870920, 0, 131085, 536870918, 0, 131086, 1, 0, 131087, 536870928, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 536870920, 0, 262143, 536870918, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 536870928, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 536870920, 0, 196621, 536870918, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 536870920, 0, 327679, 536870918, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 536870923, 0, 262157, 536870921, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 536870920, 0, 393215, 536870918, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 536870920, 0, 458751, 536870926, 0, 393216, 536870916, 0, 393217, 536870916, 0, 393218, 536870916, 0, 393219, 536870916, 0, 393220, 536870916, 0, 393221, 536870916, 0, 393222, 536870916, 0, 393223, 536870916, 0, 393224, 536870916, 0, 393225, 536870916, 0, 393226, 536870912, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 536870928, 0, 393235, 1, 0, 393236, 536870920, 0, 524284, 0, 0, 524285, 536870922, 0, 524286, 536870922, 0, 524287, 536870922, 0, 458752, 536870922, 0, 458753, 536870922, 0, 458754, 536870922, 0, 458755, 536870922, 0, 458756, 536870922, 0, 458757, 536870922, 0, 458758, 536870922, 0, 458759, 536870922, 0, 458760, 536870922, 0, 458761, 536870922, 0, 458762, 536870921, 0, 458763, 1, 0, 458764, 1, 0, 458765, 536870928, 0, 458766, 536870928, 0, 458767, 536870928, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 536870920, 0, 589820, 0, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 536870920, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 536870912, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 536870928, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 536870920, 0, 720895, 536870926, 0, 655360, 536870916, 0, 655361, 536870916, 0, 655362, 536870916, 0, 655363, 536870916, 0, 655364, 536870916, 0, 655365, 536870916, 0, 655366, 536870916, 0, 655367, 536870916, 0, 655368, 536870916, 0, 655369, 536870916, 0, 655370, 536870916, 0, 655371, 536870916, 0, 655372, 536870916, 0, 655373, 536870916, 0, 655374, 536870916, 0, 655375, 536870916, 0, 655376, 536870916, 0, 655377, 536870916, 0, 655378, 536870916, 0, 655379, 536870916, 0, 655380, 536870925, 0 )

[node name="Road" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 8
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( 9, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65545, 2, 0, 65552, 2, 0, 65553, 2, 0, 65554, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131081, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196617, 2, 0, 196624, 2, 0, 196625, 2, 0, 196626, 2, 0, 262146, 2, 0, 262153, 2, 0, 262161, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327697, 2, 0, 393233, 2, 0, 458769, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0 )

[node name="Path" type="Line2D" parent="Road"]
visible = false
position = Vector2( 1, 1 )
points = PoolVector2Array( -45, 271, 559, 273, 559, 112 )

[node name="Path2" type="Line2D" parent="Road"]
visible = false
position = Vector2( 1, 0 )
points = PoolVector2Array( 304, -43, 307, 177, 81, 176, 80, 102 )

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint" type="Node2D" parent="SpawnPoints"]
position = Vector2( -79, 272 )
script = ExtResource( 3 )

[node name="SpawnTimer" type="Timer" parent="SpawnPoints/SpawnPoint"]

[node name="SpawnPoint2" type="Node2D" parent="SpawnPoints"]
position = Vector2( 302, -74 )
script = ExtResource( 3 )
initial_index = 1

[node name="SpawnTimer" type="Timer" parent="SpawnPoints/SpawnPoint2"]

[node name="NewWaveTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerCoord" type="Node2D" parent="."]
position = Vector2( 204, 85 )

[node name="PhylaCoords" type="Node2D" parent="."]

[node name="Coord" type="Node2D" parent="PhylaCoords"]
position = Vector2( 559, 80 )

[node name="Coord2" type="Node2D" parent="PhylaCoords"]
position = Vector2( 79, 81 )

[connection signal="enemy_down" from="." to="." method="_on_enemy_down"]
[connection signal="timeout" from="SpawnPoints/SpawnPoint/SpawnTimer" to="SpawnPoints/SpawnPoint" method="_on_spawn"]
[connection signal="timeout" from="SpawnPoints/SpawnPoint2/SpawnTimer" to="SpawnPoints/SpawnPoint2" method="_on_spawn"]
[connection signal="timeout" from="NewWaveTimer" to="." method="_on_new_wave"]
